--- a/.gitignore
+++ b/.gitignore
@@ -5,54 +5,17 @@ cmake-build-*/
 # IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# Compiled Object files
+# Compiled files
 *.o
-*.obj
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.a
-*.lib
-
-# Executables
 *.exe
 *.out
-*.app
-main
 
-# CMake files
+# CMake generated files
 CMakeCache.txt
 CMakeFiles/
-cmake_install.cmake
 Makefile
-*.cmake
 
-# Testing
-Testing/
-CTestTestfile.cmake
-
-# Documentation
-docs/html/
-docs/latex/
-
-# OS specific
-.DS_Store
-Thumbs.db
-
-# Backup files
-*.bak
-*.backup
-
-# Log files
-*.log
-
-# Other
+# Project specific
 mk.sh
+build.sh
