--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,7 @@ enable_testing()
 add_executable(test_basic tests/test_basic.cpp)
 target_link_libraries(test_basic StochasticLA)
 add_test(NAME BasicTest COMMAND test_basic)
+
+add_executable(test_matrices tests/test_matrices.cpp)
+target_link_libraries(test_matrices StochasticLA)
+add_test(NAME MatricesTest COMMAND test_matrices)
