Add tests for adaptive algorithms including Adaptive Range Finder and Adaptive Power Iteration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,7 @@ add_test(NAME MatricesTest COMMAND test_matrices)
 add_executable(test_spectrum_comparison tests/test_spectrum_comparison.cpp)
 target_link_libraries(test_spectrum_comparison StochasticLA)
 add_test(NAME SpectrumComparisonTest COMMAND test_spectrum_comparison)
+
+add_executable(test_adaptive_algorithms tests/test_adaptive_algorithms.cpp)
+target_link_libraries(test_adaptive_algorithms StochasticLA)
+add_test(NAME AdaptiveAlgorithmsTest COMMAND test_adaptive_algorithms)
