Add benchmark executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,3 +98,9 @@ add_test(NAME FixedRankTest COMMAND test_fixed_rank)
 add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
 target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra)
 add_test(NAME FixedPrecisionTest COMMAND test_fixed_precision)
+
+# ========================
+# Benchmark (manual run)
+# ========================
+add_executable(rla_benchmark benchmark/benchmark.cpp)
+target_link_libraries(rla_benchmark PRIVATE randomized-linear-algebra)
