--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
 # ========================
 # Benchmark
 # ========================
-if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark.cpp)
-    add_executable(rla_benchmark benchmark/benchmark.cpp)
-    target_link_libraries(rla_benchmark PRIVATE randomized-linear-algebra)
+if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark_fixed_rank.cpp)
+    add_executable(benchmark_fixed_rank benchmark/benchmark_fixed_rank.cpp)
+    target_link_libraries(benchmark_fixed_rank PRIVATE randomized-linear-algebra)
 endif()
