refactor test functions for fixed rank

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,9 @@ if(BUILD_TESTS)
     target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra)
     add_test(NAME FixedPrecisionTest COMMAND test_fixed_precision)
 
-    add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
-    target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
-    add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
+    # add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
+    # target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
+    # add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
 endif()
 
 # ========================
