test for fixed precision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,9 +68,7 @@ if(HAVE_OPENMP)
 endif()
 target_compile_features(randomized-linear-algebra INTERFACE cxx_std_17)
 
-# ========================
-# Tests
-# ========================
+
 # ========================
 # Tests (GoogleTest + CTest)
 # ========================
@@ -93,12 +91,12 @@ if(BUILD_TESTS)
     # --- Test: Fixed Rank ---
     add_executable(test_fixed_rank tests/test_fixed_rank.cpp)
     target_link_libraries(test_fixed_rank PRIVATE randomized-linear-algebra GTest::gtest_main)
-    gtest_discover_tests(test_fixed_rank)
+    gtest_discover_tests(test_fixed_rank PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1")
 
     # --- Test: Fixed Precision ---
-    # add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
-    # target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra GTest::gtest_main)
-    # gtest_discover_tests(test_fixed_precision)
+    add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
+    target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra GTest::gtest_main)
+    gtest_discover_tests(test_fixed_precision PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1")
 endif()
 
 
