--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,9 +107,9 @@ endif()
 # TEST DI EMANUELE
 if(BUILD_TESTS)
 
-    # add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
-    # target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
-    # add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
+    add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
+    target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
+    add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
 endif()
 
 # ========================
