blocked adaptive range finder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,27 +90,31 @@ if(BUILD_TESTS)
     # Importa le macro di integrazione GTest
     include(GoogleTest)
 
-    # --- Test: Fixed Rank ---
-    add_executable(test_fixed_rank tests/test_fixed_rank.cpp)
-    target_link_libraries(test_fixed_rank PRIVATE randomized-linear-algebra GTest::gtest_main)
-    gtest_discover_tests(test_fixed_rank PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
-    DISCOVERY_TIMEOUT 60)
+    # # --- Test: Fixed Rank ---
+    # add_executable(test_fixed_rank tests/test_fixed_rank.cpp)
+    # target_link_libraries(test_fixed_rank PRIVATE randomized-linear-algebra GTest::gtest_main)
+    # gtest_discover_tests(test_fixed_rank PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
+    # DISCOVERY_TIMEOUT 60)
 
-    # --- Test: Fixed Precision ---
-    add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
-    target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra GTest::gtest_main)
-    gtest_discover_tests(test_fixed_precision PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
+    # # --- Test: Fixed Precision ---
+    # add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
+    # target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra GTest::gtest_main)
+    # gtest_discover_tests(test_fixed_precision PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
+    # DISCOVERY_TIMEOUT 60)
+
+    add_executable(test_matrix_factorizer_google tests/test_matrix_factorizer_google.cpp)
+    target_link_libraries(test_matrix_factorizer_google PRIVATE randomized-linear-algebra GTest::gtest_main)
+    gtest_discover_tests(test_matrix_factorizer_google PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
     DISCOVERY_TIMEOUT 60)
 endif()
-
 
 # TEST DI EMANUELE
-if(BUILD_TESTS)
-    enable_testing()
-    add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
-    target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
-    add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
-endif()
+# if(BUILD_TESTS)
+#     enable_testing()
+#     add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
+#     target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
+#     add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
+# endif()
 
 # ========================
 # Benchmark
