--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,22 @@
+# ========================
+# Threading/BLAS selection
+# ========================
+set(THREADING_MODE "openmp" CACHE STRING "Threading mode: openmp, blas, or single")
+set(ENABLE_OPENMP OFF)
+set(ENABLE_OPENBLAS OFF)
+if(THREADING_MODE STREQUAL "openmp")
+    set(ENABLE_OPENMP ON)
+    set(ENABLE_OPENBLAS OFF)
+elseif(THREADING_MODE STREQUAL "blas")
+    set(ENABLE_OPENMP OFF)
+    set(ENABLE_OPENBLAS ON)
+elseif(THREADING_MODE STREQUAL "single")
+    set(ENABLE_OPENMP OFF)
+    set(ENABLE_OPENBLAS OFF)
+else()
+    message(FATAL_ERROR "THREADING_MODE deve essere uno tra: openmp, blas, single")
+endif()
+
 cmake_minimum_required(VERSION 3.15)
 project(randomized-linear-algebra VERSION 1.0.0 LANGUAGES CXX)
 
@@ -7,7 +26,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # ========================
 # Eigen3 (header-only)
 # ========================
-
 find_package(Eigen3 QUIET NO_MODULE)
 if(NOT TARGET Eigen3::Eigen)
     find_path(EIGEN3_INCLUDE_DIR
@@ -25,7 +43,6 @@ endif()
 # ========================
 # FFTW (double precision)
 # ========================
-
 find_package(PkgConfig QUIET)
 set(_have_fftw_target OFF)
 if(PKG_CONFIG_FOUND)
@@ -40,7 +57,6 @@ endif()
 # ========================
 # OpenMP (optional)
 # ========================
-option(ENABLE_OPENMP "Enable OpenMP parallelism" ON)
 option(BUILD_TESTS "Build tests" ON)
 set(HAVE_OPENMP OFF)
 if(ENABLE_OPENMP)
@@ -52,7 +68,24 @@ if(ENABLE_OPENMP)
     endif()
 endif()
 
-
+# ========================
+# OpenBLAS (optional, per BLAS in Eigen)
+# ========================
+set(HAVE_OPENBLAS OFF)
+if(ENABLE_OPENBLAS)
+    find_package(PkgConfig QUIET)
+    if(PKG_CONFIG_FOUND)
+        pkg_check_modules(OPENBLAS QUIET IMPORTED_TARGET openblas)
+        if(TARGET PkgConfig::OPENBLAS)
+            add_library(OpenBLAS::OpenBLAS INTERFACE IMPORTED)
+            target_link_libraries(OpenBLAS::OpenBLAS INTERFACE PkgConfig::OPENBLAS)
+            set(HAVE_OPENBLAS ON)
+        endif()
+    endif()
+    if(NOT HAVE_OPENBLAS)
+        message(STATUS "OpenBLAS non trovato: procedo senza backend BLAS per Eigen")
+    endif()
+endif()
 
 # ========================
 # randomized-linear-algebra (header-only)
@@ -64,10 +97,18 @@ target_link_libraries(randomized-linear-algebra
         Eigen3::Eigen
         FFTW::Double
 )
+
 if(HAVE_OPENMP)
     target_link_libraries(randomized-linear-algebra INTERFACE OpenMP::OpenMP_CXX)
     target_compile_definitions(randomized-linear-algebra INTERFACE RRF_USE_OPENMP=1)
 endif()
+
+# Abilita l'uso della BLAS in Eigen se OpenBLAS è disponibile
+if(HAVE_OPENBLAS)
+    target_link_libraries(randomized-linear-algebra INTERFACE OpenBLAS::OpenBLAS)
+    target_compile_definitions(randomized-linear-algebra INTERFACE EIGEN_USE_BLAS=1)
+endif()
+
 target_compile_features(randomized-linear-algebra INTERFACE cxx_std_17)
 
 # ========================
@@ -83,40 +124,19 @@ if(BUILD_TESTS)
         GIT_REPOSITORY https://github.com/google/googletest.git
         GIT_TAG v1.17.0
     )
-
     set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
     set(BUILD_GTEST ON  CACHE BOOL "" FORCE)
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     FetchContent_MakeAvailable(googletest)
 
-    # Importa le macro di integrazione GTest
     include(GoogleTest)
-
-    # # --- Test: Fixed Rank ---
-    # add_executable(test_fixed_rank tests/test_fixed_rank.cpp)
-    # target_link_libraries(test_fixed_rank PRIVATE randomized-linear-algebra GTest::gtest_main)
-    # gtest_discover_tests(test_fixed_rank PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
-    # DISCOVERY_TIMEOUT 60)
-
-    # # --- Test: Fixed Precision ---
-    # add_executable(test_fixed_precision tests/test_fixed_precision.cpp)
-    # target_link_libraries(test_fixed_precision PRIVATE randomized-linear-algebra GTest::gtest_main)
-    # gtest_discover_tests(test_fixed_precision PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
-    # DISCOVERY_TIMEOUT 60)
 
     add_executable(test_matrix_factorizer_google tests/test_matrix_factorizer_google.cpp)
     target_link_libraries(test_matrix_factorizer_google PRIVATE randomized-linear-algebra GTest::gtest_main)
-    gtest_discover_tests(test_matrix_factorizer_google PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
-    DISCOVERY_TIMEOUT 60)
+    gtest_discover_tests(test_matrix_factorizer_google
+        PROPERTIES ENVIRONMENT "OMP_NUM_THREADS=1"
+        DISCOVERY_TIMEOUT 60)
 endif()
-
-# TEST DI EMANUELE
-# if(BUILD_TESTS)
-#     enable_testing()
-#     add_executable(test_matrix_factorizer tests/test_matrix_factorizer.cpp)
-#     target_link_libraries(test_matrix_factorizer PRIVATE randomized-linear-algebra)
-#     add_test(NAME MatrixFactorizerTest COMMAND test_matrix_factorizer)
-# endif()
 
 # ========================
 # Benchmark
