Fix error messages in CMakeLists.txt for clarity and consistency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ elseif(THREADING_MODE STREQUAL "single")
     set(ENABLE_OPENMP OFF)
     set(ENABLE_OPENBLAS OFF)
 else()
-    message(FATAL_ERROR "THREADING_MODE deve essere uno tra: openmp, blas, single")
+    message(FATAL_ERROR "THREADING_MODE must be one of: openmp, blas, single")
 endif()
 
 cmake_minimum_required(VERSION 3.15)
@@ -34,7 +34,7 @@ if(NOT TARGET Eigen3::Eigen)
         PATH_SUFFIXES Eigen eigen3
     )
     if(NOT EIGEN3_INCLUDE_DIR)
-        message(FATAL_ERROR "Impossibile trovare le intestazioni Eigen3. Imposta EIGEN3_INCLUDE_DIR o installa Eigen (es. libeigen3-dev).")
+        message(FATAL_ERROR "Unable to find Eigen3 headers. Set EIGEN3_INCLUDE_DIR or install Eigen (e.g. libeigen3-dev).")
     endif()
     add_library(Eigen3::Eigen INTERFACE IMPORTED)
     target_include_directories(Eigen3::Eigen INTERFACE ${EIGEN3_INCLUDE_DIR})
@@ -64,12 +64,12 @@ if(ENABLE_OPENMP)
     if(OpenMP_CXX_FOUND)
         set(HAVE_OPENMP ON)
     else()
-        message(STATUS "OpenMP non trovato: compilazione senza parallelismo OpenMP")
+        message(STATUS "OpenMP not found: compiling without OpenMP parallelism")
     endif()
 endif()
 
 # ========================
-# OpenBLAS (optional, per BLAS in Eigen)
+# OpenBLAS (optional, for BLAS in Eigen)
 # ========================
 set(HAVE_OPENBLAS OFF)
 if(ENABLE_OPENBLAS)
@@ -83,7 +83,7 @@ if(ENABLE_OPENBLAS)
         endif()
     endif()
     if(NOT HAVE_OPENBLAS)
-        message(STATUS "OpenBLAS non trovato: procedo senza backend BLAS per Eigen")
+        message(STATUS "OpenBLAS not found: proceeding without BLAS backend for Eigen")
     endif()
 endif()
 
@@ -103,7 +103,6 @@ if(HAVE_OPENMP)
     target_compile_definitions(randomized-linear-algebra INTERFACE EIGEN_USE_OPENMP=1)
 endif()
 
-# Abilita l'uso della BLAS in Eigen se OpenBLAS è disponibile
 if(HAVE_OPENBLAS)
     target_link_libraries(randomized-linear-algebra INTERFACE OpenBLAS::OpenBLAS)
     target_compile_definitions(randomized-linear-algebra INTERFACE EIGEN_USE_BLAS=1)
