Add option to build benchmarks in CMake and update build script accordingly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,12 +151,15 @@ endif()
 # ========================
 # Benchmark
 # ========================
-if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark_fixed_rank_A.cpp)
-    add_executable(benchmark_fixed_rank_A benchmark/benchmark_fixed_rank_A.cpp)
-    target_link_libraries(benchmark_fixed_rank_A PRIVATE randomized-linear-algebra)
-endif()
+option(BUILD_BENCHMARKS "Build benchmarks" ON)
+if(BUILD_BENCHMARKS)
+    if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark_fixed_rank_A.cpp)
+        add_executable(benchmark_fixed_rank_A benchmark/benchmark_fixed_rank_A.cpp)
+        target_link_libraries(benchmark_fixed_rank_A PRIVATE randomized-linear-algebra)
+    endif()
 
-if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark_fixed_precision_A.cpp)
-    add_executable(benchmark_fixed_precision_A benchmark/benchmark_fixed_precision_A.cpp)
-    target_link_libraries(benchmark_fixed_precision_A PRIVATE randomized-linear-algebra)
+    if(EXISTS ${CMAKE_SOURCE_DIR}/benchmark/benchmark_fixed_precision_A.cpp)
+        add_executable(benchmark_fixed_precision_A benchmark/benchmark_fixed_precision_A.cpp)
+        target_link_libraries(benchmark_fixed_precision_A PRIVATE randomized-linear-algebra)
+    endif()
 endif()
